--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,14 @@
             >
               Realizar
             </button>
+            <!--<button
+              style="margin-left: 1em;"
+              type="button"
+              class="control btn btn-danger"
+              (click)="cancelar()"
+            >
+              Cancelar
+            </button>-->
           </div>
         </div>
       </div>
